...
                  text: 'Inicio',
                  key: Key('init_button'),
                ),
                GButton(
                  icon: Icons.search,
                  text: 'Explorar',
                  key: Key('explore_button'),
                ),
                GButton(
                  icon: Icons.add_reaction,
                  text: 'Amigos',
                  key: Key('friends_button'),
                ),
                GButton(
                  icon: Icons.person,
                  text: 'Perfil',
                  key: Key('profile_button'),
                ),
              ],
            )),
      ),
      body: _screens[_selectedIndex],
    );
...
