...
                );
              }
            },
          ),
          _ProfileOptionTile(
            icon: Icons.star,
            label: 'Ver lista de favoritos',
            onTap: () async {
              List<int> favoriteMovieIds = [];

              try {
                final userId = FirebaseAuth.instance.currentUser?.uid;

...
            indent: 75,
            endIndent: 75,
            color: Color.fromRGBO(190, 49, 68, 1),
          ),
          _ProfileOptionTile(
            icon: Icons.exit_to_app,
            label: 'Cerrar sesión',
            color: const Color.fromRGBO(190, 49, 68, 1),
            onTap: () async {
              await FirebaseAuth.instance.signOut();
              Navigator.of(context).pushReplacementNamed('/');
            },
          ),
...
