...
                              ),
                            ),
                            TextButton(
                              onPressed: () =>
                                  Navigator.of(context).pop(enteredPassword),
                              child: const Text(
                                'Confirmar',
                                style: TextStyle(
                                    color: Color.fromRGBO(190, 49, 68, 1)),
                              ),
                            ),
                          ],
                        );
...
                    backgroundColor: Color.fromRGBO(21, 4, 29, 1),
                  ),
                );
              }
            },
            child: const Text(
              'Borrar Cuenta',
              style: TextStyle(color: Color.fromRGBO(190, 49, 68, 1)),
            ),
          ),
        ],
      );
    },
...
